2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&macro_define): Don't rely on $1.
	Initialize the variable.
	Set its Automakism only if not defined or if given to the user.
	When concatenating values, insert a separator only if the value
	was not empty.
	(&read_am_file): When dumping the @var_list, skip Automake
	variables.
	(&file_contents): Use macro_define.

	
2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&rule_define): Extract from...
	(&read_am_file): here.

	
2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&macro_define, &read_am_file): More work for the
	former from the latter.  Reorganize the latter.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (&macro_define): Extract from...
	(&read_am_file): here.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (%am_var_defs): Replace with...
	(%var_is_am): this.
	(&handle_installdirs, &variable_value_as_list_worker, &read_am_file)
	(&file_contents, am_primary_&prefixes): Adjust.
	(&variable_defined, &define_variable): The actual semantics is
	`user defined'.
	(&read_main_am_file): Assert the var is user defined when
	outputting @var_list.

2001-03-23  Akim Demaille  <akim@epita.fr>

	* automake.in (read_am_file): TRUE and FALSE are predefined
	conditionals.
	(&by_condition): Adjust.
	(&conditional_string): Recognize `TRUE' and `FALSE'.
	(&make_condition): Use it.
	* m4/cond.m4: Reject TRUE and FALSE as conditionals.
	* automake.texi (Conditionals): Adjust.
	* tests/cond9.test: s/FALSE/WRONG/.

2001-03-12  Pavel Roskin  <proski@gnu.org>

	* tests/Makefile.am (XFAIL_TESTS): Remove cond3.test, it passes
	now.

2001-03-12  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_conditions_permutations): Separate the
	conditions.
	* tests/cond3.test: Improve the sed expression.

2001-03-09  Pavel Roskin  <proski@gnu.org>

	* Makefile.am (maintainer-check): Scan all *.am files and tests
	for invocations of `rm' without `-f'.