@@ -1,5 +1,9 @@
 2001-03-23  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&file_contents): Use rule_define.
+
+2001-03-23  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&macro_define): Don't rely on $1.
 	Initialize the variable.
 	Set its Automakism only if not defined or if given to the user.
